--- a/app/views/yeahaps/index.html.erb
+++ b/app/views/yeahaps/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container yeahap-list">
+<div class="container">
   <%= render partial: 'index', locals: { yeahapbox: @yeahapbox } %>
 </div>
 
@@ -19,3 +19,15 @@
     </div>
   </div>
 </div>
+
+
+<script>
+
+$( function() {
+  $('ul.yeahap-ul').sortable({
+    connectWith: ".yeahap-ul",
+    placeholder: "yeahap-li-placeholder"
+  }).disableSelection();
+});
+
+</script>
