--- a/app/views/yeahaps/_index.html.erb
+++ b/app/views/yeahaps/_index.html.erb
@@ -3,9 +3,9 @@
     <div class="box-title-wrapper">
       <span class="box-title"> <%= b.title %> </span><span class="box-title-count">( <%= b.yeahaps.count %> )</span>
     </div>
-    <ul class="yeahap-ul" id="box_<%= b.id %>">
-      <% b.yeahaps.each do |y| %>
-        <li class="yeahap-li" id="yeahap_<%= y.id  %>">
+    <ul class="yeahap-ul" id="box_<%= b.id %>" data-update-url=<%= yeahaps_sort_path %>>
+      <% b.yeahaps.order("position").each do |y| %>
+        <%= content_tag_for :li, y, class: 'yeahap-li' do %>
           <div class="page-block tooltip">
             <%= link_to y.page.url, class: "list-group-item list-group-item-action flex-column align-items-start" do %>
               <%= image_tag "https://www.google.com/s2/favicons?domain=#{y.page.url}", onerror: "this.src='#{asset_path("favicon.ico")}'"%>
@@ -27,7 +27,7 @@
               </center>
             </span>
           </div>
-        </li>
+        <% end %>
       <% end %>
     </ul>
   </div>
