--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,32 @@
 .user-view-size{
   width: 300px;
 }
+.sign-in {
+  height: 400px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+.btn-yeahap {
+  background-color: orange;
+  color: white;
+  padding: 13px 115px;
+  border: none;
+  margin: 1rem 0;
+}
+.btn-yeahap2 {
+  background-color: orange;
+  color: white;
+  padding: 13px 10px;
+  border: none;
+  margin: 1rem 0;
+}
+
+.md-form {
+  input {
+    border-bottom: 1px solid orange;
+  }
+}
