--- a/app/assets/stylesheets/yeahaps.scss
+++ b/app/assets/stylesheets/yeahaps.scss
@@ -1,10 +1,6 @@
 // Place all the styles related to the yeahaps controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-//
-//
-
-
 .yeahap-ul{
   width: 100%;
   min-height: 100px;
@@ -19,8 +15,9 @@
   margin: 0;
   padding: 0;
   width: 224.5px;
-  height: 75.5px;
-  background-color: gray;
+  height: 79.5px;
+  background-color: orange;
+  opacity: 0.3;
 }
 
 .box-title-wrapper {
