--- a/app/views/my_pages/_list.html.erb
+++ b/app/views/my_pages/_list.html.erb
@@ -2,5 +2,8 @@
   <li class="friend">
     <%= image_tag asset_path("coffee.png"), class: "friend-profile-img" %>
     <span class="marginRight20"><%= f.email %></span>
+    <%= link_to destroy_followee_path(f.id), method: "DELETE", data: {confirm: "Are You Sure?"} do %>
+      <i class="fa fa-close orange-text"></i>
+    <% end %>
   </li>
 <% end %>
