--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,21 +1,23 @@
 <main>
-<div class="container user-view-size">
-
-  <h2>Forgot your password?</h2>
+<div class="container user-view-size card-block sign-in">
 
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <%= devise_error_messages! %>
 
-    <div class="field">
-      <%= f.label :email %><br />
+    <div class="field md-form">
       <%= f.email_field :email, autofocus: true %>
+      <%= f.label :email %><br />
     </div>
 
-    <div class="actions">
-      <%= f.submit "Send me reset password instructions" %>
+    <div class="actions text-center">
+      <%= f.submit "Send me reset password instructions", class: "btn-yeahap2" %>
     </div>
   <% end %>
 
-  <%= render "users/shared/links" %>
+  <div class="modal-footer">
+    <div class="options">
+      <%= render "users/shared/links" %>
+    </div>
+  </div>
 </div>
 </main>
