--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,41 +1,41 @@
 <main>
-<div class="container user-view-size">
+<div class="container user-view-size card-block sign-in">
 
   <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= devise_error_messages! %>
 
-    <div class="field">
-      <%= f.label :email %><br />
+    <div class="field md-form">
       <%= f.email_field :email, autofocus: true %>
+      <%= f.label :email %><br />
     </div>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
 
-    <div class="field">
-      <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+    <div class="field md-form">
       <%= f.password_field :password, autocomplete: "off" %>
+      <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
       <% if @minimum_password_length %>
         <br />
         <em><%= @minimum_password_length %> characters minimum</em>
       <% end %>
     </div>
 
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
+    <div class="field md-form">
       <%= f.password_field :password_confirmation, autocomplete: "off" %>
+      <%= f.label :password_confirmation %><br />
     </div>
 
-    <div class="field">
+    <div class="field md-form">
       <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
       <%= f.password_field :current_password, autocomplete: "off" %>
     </div>
 
-    <div class="actions">
-      <%= f.submit "Update" %>
+    <div class="actions text-center">
+      <%= f.submit "Update", class: "btn-yeahap" %>
     </div>
   <% end %>
 
