--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,32 +1,34 @@
 <main>
-<div class="container user-view-size">
+<div class="container user-view-size card-block sign-in">
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
 
-    <div class="field">
-      <%= f.label :email %><br />
+    <div class="field md-form">
       <%= f.email_field :email, autofocus: true %>
+      <%= f.label :email %><br />
     </div>
 
-    <div class="field">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
+    <div class="field md-form">
       <%= f.password_field :password, autocomplete: "off" %>
+      <%= f.label :password %>
+      <br />
     </div>
 
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
+    <div class="field md-form">
       <%= f.password_field :password_confirmation, autocomplete: "off" %>
+      <%= f.label :password_confirmation %><br />
     </div>
 
-    <div class="actions">
-      <%= f.submit "Sign up" %>
+    <div class="actions text-center">
+      <%= f.submit "Sign up", class: "btn-yeahap" %>
     </div>
   <% end %>
 
-  <%= render "users/shared/links" %>
+  <div class="modal-footer">
+    <div class="options">
+      <%= render "users/shared/links" %>
+    </div>
+  </div>
 </div>
 </main>
