title edit view

--- a/app/views/yeahaps/_index.html.erb
+++ b/app/views/yeahaps/_index.html.erb
@@ -1,7 +1,9 @@
 <% yeahapbox.each do |b| %>
   <div class="row yeahapbox-row">
     <div class="box-title-wrapper">
-      <span class="box-title"> <%= b.title %> </span><span class="box-title-count" id="box_count_<%= b.id %>">( <%= b.yeahaps.count %> )</span>
+      <div class="title-counter">
+        <span class="box-title" id="title_<%= b.id %>" > <%= b.title %> </span><span class="box-title-count" id="box_count_<%= b.id %>">( <%= b.yeahaps.count %> )</span>
+      </div>
     </div>
     <ul class="yeahap-ul" id="box_<%= b.id %>" data-update-url=<%= yeahaps_sort_path %>>
       <% b.yeahaps.order("position").each do |y| %>
