--- a/app/assets/stylesheets/yeahaps.scss
+++ b/app/assets/stylesheets/yeahaps.scss
@@ -20,6 +20,15 @@
   opacity: 0.3;
 }
 
+.box-li-placeholder {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100px;
+  background-color: orange;
+  opacity: 0.3;
+}
+
 .box-title-wrapper {
   width: 100%;
   margin-bottom: 0.3rem;
