--- a/app/views/yeahaps/_index.html.erb
+++ b/app/views/yeahaps/_index.html.erb
@@ -3,12 +3,15 @@
     <%= content_tag_for :li, b, class: 'box-li' do %>
       <div class="row yeahapbox-row">
         <div class="box-title-wrapper">
-          <div class="handler">
-            [drag]
-          </div>
+          <span class ="handler box-toolbar">
+            <i class="fa fa-sort handler" aria-hidden="true"></i>
+          </span>
           <div class="title-counter">
             <span class="box-title" id="title_<%= b.id %>" ><%=b.title%></span><span class="box-title-count" id="box_count_<%= b.id %>">( <%= b.yeahaps.count %> )</span>
           </div>
+          <span class="delete-box box-toolbar">
+            <i class="fa fa-trash trash" aria-hidden="true"></i>
+          </span>
         </div>
         <ul class="yeahap-ul" id="box_<%= b.id %>" data-update-url=<%= yeahaps_sort_path %>>
           <% b.yeahaps.order("position").each do |y| %>
