--- a/app/views/yeahaps/_index.html.erb
+++ b/app/views/yeahaps/_index.html.erb
@@ -9,7 +9,7 @@
           <div class="title-counter">
             <span class="box-title" id="title_<%= b.id %>" ><%=b.title%></span><span class="box-title-count" id="box_count_<%= b.id %>">( <%= b.yeahaps.count %> )</span>
           </div>
-          <span class="delete-box box-toolbar">
+          <span class="delete-box box-toolbar" id="delete_<%= b.id %>">
             <i class="fa fa-trash trash" aria-hidden="true"></i>
           </span>
         </div>
