--- a/app/assets/stylesheets/my_pages.scss
+++ b/app/assets/stylesheets/my_pages.scss
@@ -9,6 +9,9 @@
 .marginRight20 {
   margin-right: 20px;
 }
+.marginBottom50 {
+  margin-bottom: 50px;
+}
 .profile {
   .profile-img {
     display: inline-block;
