--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,20 +29,39 @@
                   <%= link_to new_yeahapbox_path, remote: true do %>
                     <i class="fa fa-inbox"  data-toggle="modal" data-target="#modal" aria-hidden="true"></i>
                   <% end %>
-                  <span class="tooltiptext-menu tooltiptext1">new box</span>
+                  <span class="tooltiptext-menu">new box</span>
                 </li>
                 <li class="tooltip-menu">
                   <%= link_to my_pages_path do %>
                     <i class="fa fa-user-circle" aria-hidden="true"></i>
                   <% end %>
-                  <span class="tooltiptext-menu tooltiptext2">profile</span>
+                  <span class="tooltiptext-menu">profile</span>
                 </li>
               <% end %>
+              <li class="tooltip-menu">
+                <%= link_to notices_path do  %>
+                  <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+                <% end %>
+                <span class="tooltiptext-menu">notice</span>
+              </li>
               <li class="tooltip-menu">
                 <%= link_to destroy_user_session_path, method: "delete" do  %>
                   <i class="fa fa-power-off" aria-hidden="true"></i>
                 <% end %>
-                <span class="tooltiptext-menu tooltiptext3">log out</span>
+                <span class="tooltiptext-menu">log out</span>
+              </li>
+            <% elsif admin_signed_in? %>
+              <li class="tooltip-menu">
+                <%= link_to notices_path do  %>
+                  <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+                <% end %>
+                <span class="tooltiptext-menu">notice</span>
+              </li>
+              <li class="tooltip-menu">
+                <%= link_to destroy_admin_session_path, method: "delete" do  %>
+                  <i class="fa fa-power-off" aria-hidden="true"></i>
+                <% end %>
+                <span class="tooltiptext-menu">log out</span>
               </li>
             <% else %>
               <li>
