--- a/app/assets/stylesheets/yeahaps.scss
+++ b/app/assets/stylesheets/yeahaps.scss
@@ -1,6 +1,7 @@
 // Place all the styles related to the yeahaps controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import 'variables';
 
 .box-title-wrapper:hover .box-toolbar {
   visibility: visible;
@@ -12,10 +13,12 @@
 
 .handler {
   cursor: move;
+  font-size: 1.2rem;
+  margin-right: 3px;
+  color: $main_color;
 }
 
 .yeahap-ul{
-  margin-left: 15px;
   width: 100%;
   min-height: 100px;
 }
@@ -30,7 +33,7 @@
   padding: 0;
   width: 224.5px;
   height: 77.5px;
-  background-color: orange;
+  background-color: $main_color;
   opacity: 0.3;
 }
 
@@ -39,7 +42,7 @@
   padding: 0;
   width: 100%;
   height: 100px;
-  background-color: orange;
+  background-color: $main_color;
   opacity: 0.3;
 }
 
@@ -90,7 +93,7 @@
   overflow:hidden;
 }
 input.edit-yeahap {
-  border-bottom: 2px solid orange;
+  border-bottom: 2px solid $main_color;
   padding-bottom: 0;
 }
 div.title-counter {
@@ -100,9 +103,13 @@ div.title-counter {
   margin-right: 0.5rem;
 }
 input.title-edit-input {
-  outline: 3px solid orange;
+  outline: 3px solid $main_color;
   position: relative;
   left: 2px;
   margin-right: 0.5rem;
   width: 150px;
+}
+.delete-box {
+  margin-left: 5px;
+  color: $main_color;
 }
