flash message fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -210,7 +210,7 @@ div.footer-copyright{
 #main_flash_message {
   display: none;
   width: 300px;
-  position: absolute;
+  position: fixed;
   margin-right: auto;
   margin-left: auto;
   left: 0;
