--- a/app/views/yeahaps/_index.html.erb
+++ b/app/views/yeahaps/_index.html.erb
@@ -17,7 +17,7 @@
           <% b.yeahaps.order("position").each do |y| %>
             <%= content_tag_for :li, y, class: 'yeahap-li' do %>
               <div class="page-block tooltip">
-                <%= link_to y.page.url, class: "list-group-item list-group-item-action flex-column align-items-start" do %>
+                <%= link_to "http://#{y.page.url}", class: "list-group-item list-group-item-action flex-column align-items-start" do %>
                   <%= image_tag "https://www.google.com/s2/favicons?domain=#{y.page.url}", onerror: "this.src='#{asset_path("favicon.ico")}'"%>
                   <span><%= y.content %></span>
                   <small class="text-muted ellipsis" >
