--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,14 +35,14 @@
                   <span class="tooltiptext-menu">New Box</span>
                 </li>
                 <li class="tooltip-menu">
-                  <%= link_to new_yeahapbox_path, remote: true do %>
-                    <i class="fa fa-file"  data-toggle="modal" data-target="#modal" aria-hidden="true"></i>
+                  <%= link_to "" do %>
+                    <i class="fa fa-file" aria-hidden="true"></i>
                   <% end %>
                   <span class="tooltiptext-menu">Import</span>
                 </li>
                 <li class="tooltip-menu">
-                  <%= link_to new_yeahapbox_path, remote: true do %>
-                    <i class="fa fa-save"  data-toggle="modal" data-target="#modal" aria-hidden="true"></i>
+                  <%= link_to "" do %>
+                    <i class="fa fa-save" aria-hidden="true"></i>
                   <% end %>
                   <span class="tooltiptext-menu">Export</span>
                 </li>
