Private/Public & Followee Page

--- a/app/assets/stylesheets/yeahaps.scss
+++ b/app/assets/stylesheets/yeahaps.scss
@@ -24,7 +24,15 @@
 }
 
 .yeahap-li{
-  float: left;
+ float: left;
+}
+
+.private {
+  div.page-block {
+    a.list-group-item {
+      background-color: #eee;
+    }
+  }
 }
 
 .yeahap-li-placeholder {
@@ -67,22 +75,39 @@
   border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
 }
 
-.tooltip .tooltiptext {
-  top: 10%;
-  left: 100%;
-  visibility: hidden;
-  width: 50px;
+.menu-btn {
+  position: absolute;
+  top: 5%;
+  left: 86%;
+  width: 30px;
   height: 30px;
+  padding: 5px;
+  color: #d0d0d0;
+}
+
+.tooltip .tooltiptext {
+  top: 35%;
+  left: 82%;
+  visibility: hidden;
+  width: 90px;
+  height: 120px;
   background-color: black;
   color: #fff;
-  text-align: center;
-  padding: 5px 0;
+  text-align: left;
+  padding: 5px 0 5px 7px;
   border-radius: 6px;
+  opacity: 0.5;
+  a {
+    line-height: 2;
+  }
+  a:hover {
+    color: orange;
+  }
 
   /* Position the tooltip text - see examples below! */
   position: absolute;
 }
-.tooltip:hover .tooltiptext {
+.menu-btn:hover .tooltiptext {
   visibility: visible;
 }
 .ellipsis {
