--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,12 @@
         <nav>
           <ul>
            <% if user_signed_in? %>
-              <% unless params[:controller] == "my_pages" || params[:controller] == "notices" %>
+             <% if params[:action] == "followee" %>
+               <li>
+                 <span><strong class="whois"><%= @followee %></strong>'s Yeahaps</span>
+               </li>
+             <% end %>
+             <% unless params[:controller] == "my_pages" || params[:controller] == "notices" || params[:action] == "followee" %>
                 <li class="tooltip-menu">
                   <%= link_to new_yeahapbox_path, remote: true do %>
                     <i class="fa fa-inbox"  data-toggle="modal" data-target="#modal" aria-hidden="true"></i>
@@ -35,15 +40,15 @@
                   <span class="tooltiptext-menu">New Box</span>
                 </li>
                 <li class="tooltip-menu">
-                  <%= link_to "" do %>
+                  <%#= link_to "" do %>
                     <i class="fa fa-file" aria-hidden="true"></i>
-                  <% end %>
+                  <%# end %>
                   <span class="tooltiptext-menu">Import</span>
                 </li>
                 <li class="tooltip-menu">
-                  <%= link_to "" do %>
+                  <%#= link_to "" do %>
                     <i class="fa fa-save" aria-hidden="true"></i>
-                  <% end %>
+                  <%# end %>
                   <span class="tooltiptext-menu">Export</span>
                 </li>
               <% end %>
