--- a/app/assets/stylesheets/my_pages.scss
+++ b/app/assets/stylesheets/my_pages.scss
@@ -68,8 +68,8 @@ h3.title {
   ul.friends_list {
     margin: 1rem 0;
     li.friend {
-      display: inline;
-      margin: 5px 1rem 5px 0;
+      display: inline-block;
+      margin: 5px 1rem 10px 0;
     }
   }
 }
