--- a/app/assets/stylesheets/yeahaps.scss
+++ b/app/assets/stylesheets/yeahaps.scss
@@ -3,19 +3,40 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import 'variables';
 
-.box-title-wrapper:hover .box-toolbar {
-  visibility: visible;
-}
-
-.box-toolbar {
-  visibility: hidden;
-}
-
 .handler {
   cursor: move;
   font-size: 1.2rem;
   margin-right: 3px;
   color: $main_color;
+}
+
+.recent-ul {
+  margin-bottom: 5rem;
+  color: #fff;
+  .yeahap-li {
+    a {
+      border: 1px solid $main_color;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+    span.list-group-item {
+      display: block;
+      padding: 0.35rem 1.25rem;
+      border: 1px solid $main_color;
+      background-color: $main_color;
+    }
+    span.menu-btn {
+      .tooltiptext {
+        height: 30px;
+        top: 0;
+        left: -54px;
+        width: 80px;
+        a {
+          border: none;
+        }
+      }
+    }
+  }
 }
 
 .yeahap-ul{
@@ -25,6 +46,8 @@
 
 .yeahap-li {
   float: left;
+  margin: 0 2px 2px 0;
+  width: 226px;
   div {
     a {
       border-bottom-right-radius: 0.25rem;
@@ -78,6 +101,7 @@
   z-index: 1;
   position: relative;
   display: inline-block;
+  width: 100%;
 }
 
 .menu-btn {
@@ -91,8 +115,9 @@
 }
 
 .tooltip .tooltiptext {
-  top: -23%;
-  left: 84%;
+  position: absolute;
+  top: -22px;
+  left: -64px;
   visibility: hidden;
   width: 90px;
   height: 90px;
@@ -101,12 +126,12 @@
   text-align: left;
   padding: 5px 0 5px 7px;
   border-radius: 6px;
-  opacity: 0.5;
+  opacity: 0.7;
   a {
     line-height: 1;
   }
   a:hover {
-    color: orange;
+    color: $main_color;
   }
 
   /* Position the tooltip text - see examples below! */
