--- a/app/views/yeahaps/_index.html.erb
+++ b/app/views/yeahaps/_index.html.erb
@@ -3,13 +3,13 @@
     <%= content_tag_for :li, b, class: 'box-li' do %>
       <div class="row yeahapbox-row">
         <div class="box-title-wrapper">
-          <span class ="handler box-toolbar">
+          <span class ="handler">
             <i class="fa fa-sort handler" aria-hidden="true"></i>
           </span>
           <div class="title-counter">
             <span class="box-title" id="title_<%= b.id %>" ><%=b.title%></span><span class="box-title-count" id="box_count_<%= b.id %>">( <%= b.yeahaps.count %> )</span>
           </div>
-          <span class="delete-box box-toolbar" id="delete_<%= b.id %>">
+          <span class="delete-box" id="delete_<%= b.id %>">
             <i class="fa fa-trash trash" aria-hidden="true"></i>
           </span>
         </div>
@@ -30,28 +30,28 @@
                 <% end %>
                 <span class="menu-btn">
                   <i class="fa fa-caret-down"></i>
-                </span>
-                <span class="tooltiptext">
-                  <%= link_to edit_yeahap_path(y.id), remote: true do %>
-                    <span data-toggle="modal" data-target="#modal">
-                      <i class="fa fa-edit" aria-hidden="true"></i>  EDIT
-                    </span>
-                  <% end %><br />
-                  <%= link_to change_private_path(y.id) do %>
-                    <% if y.is_public? %>
-                      <i class="fa fa-user-times"></i> PRIVATE
-                    <% else %>
-                      <i class="fa fa-users"></i> PUBLIC
+                  <span class="tooltiptext">
+                    <%= link_to edit_yeahap_path(y.id), remote: true do %>
+                      <span data-toggle="modal" data-target="#modal">
+                        <i class="fa fa-edit" aria-hidden="true"></i>  EDIT
+                      </span>
+                    <% end %><br />
+                    <%= link_to change_private_path(y.id) do %>
+                      <% if y.is_public? %>
+                        <i class="fa fa-user-times"></i> PRIVATE
+                      <% else %>
+                        <i class="fa fa-users"></i> PUBLIC
+                      <% end %>
+                    <% end %><br />
+                    <%= link_to yeahap_move_form_path(y.id), remote: true do %>
+                      <span data-toggle="modal" data-target="#modal">
+                        <i class="fa fa-unsorted"></i> &nbsp; MOVE
+                      </span>
+                    <% end %><br />
+                    <%= link_to yeahap_path(y.id), method: "delete", remote: true, data: {confirm: "Are You Sure?"} do %>
+                      <i class="fa fa-remove" aria-hidden="true"></i> &nbsp;DELETE
                     <% end %>
-                  <% end %><br />
-                  <%= link_to yeahap_move_form_path(y.id), remote: true do %>
-                    <span data-toggle="modal" data-target="#modal">
-                      <i class="fa fa-unsorted"></i> &nbsp; MOVE
-                    </span>
-                  <% end %><br />
-                  <%= link_to yeahap_path(y.id), method: "delete", remote: true, data: {confirm: "Are You Sure?"} do %>
-                    <i class="fa fa-remove" aria-hidden="true"></i> &nbsp;DELETE
-                  <% end %>
+                  </span>
                 </span>
               </div>
             </li>
